refactor expandable checkbox list #2

--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -1,10 +1,10 @@
-mixin expandable-checkbox-list(label, list)
-  .expandable-checkbox__list.js-expandable-checkbox__list
+mixin expandable-checkbox-list({ label, list, container, opened })
+  .expandable-checkbox__list(class=container)
     .expandable-checkbox__wrapper.js-expandable-checkbox__wrapper
       span.expandable-checkbox__label= label
       button.expandable-checkbox__button-expand.js-expandable-checkbox__button-expand
-        img(class="checkbox-button js-checkbox-button" src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
-    ul.expandable-checkbox__items.js-expandable-checkbox__items
+        img(class=`checkbox-button js-checkbox-button ${opened ? 'expandable-checkbox__button-expand_active': ''}` src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
+    ul.expandable-checkbox__items.js-expandable-checkbox__items(class=`${opened ? 'expandable-checkbox__items_active': ''}`)
       each item in checkboxList
         li.expandable-checkbox__item
           +checkbox(item.label)(checked = item.checked)
