changed old calendar to air datepicker #3

--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,15 +1,15 @@
-mixin date-dropdown(label1, label2)
-  .date-dropdown__wrapper.js-date-dropdown
+mixin date-dropdown({ label1, label2, container })
+  .date-dropdown__wrapper(class=container)
     .date-dropdown
-      .dropdown__label= label1
-      .dropdown__header
+      .date-dropdown__label.js-date-label= label1
+      .date-dropdown__header
         input(class='date-dropdown__input js-date-input' readonly placeholder='ДД.ММ.ГГГГ')
         button(class="date-dropdown__button js-expand-button" type="button")
           img(src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
     if label2
       .date-dropdown
-        .dropdown__label= label2
-        .dropdown__header
+        .date-dropdown__label= label2
+        .date-dropdown__header
           input(class='date-dropdown__input js-date-input' readonly placeholder='ДД.ММ.ГГГГ')
           button(class="date-dropdown__button js-expand-button" type="button")
             img(src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
