changed name of colors variables

--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -25,7 +25,8 @@ $dark-shade-75: rgba(31, 32, 65, 0.75);
 $dark-shade-50: rgba(31, 32, 65, 0.5);
 $dark-shade-25: rgba(31, 32, 65, 0.25);
 $dark-shade-5: rgba(31, 32, 65, 0.05);
-$purple-color: #bc9cff;
-$green-color: #6fcf97;
-$button-gradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+$mainBrandColor: #bc9cff;
+$secondBrandColor: #6fcf97;
+$mainGradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+$secondaryGradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
 $background-color: #ffffff;
