--- a/src/components/color-example/color-example.scss
+++ b/src/components/color-example/color-example.scss
@@ -50,10 +50,10 @@
   }
 
   &_green {
-    background-color: $green-color;
+    background-color: $secondBrandColor;
   }
 
   &_purple {
-    background-color: $purple-color;
+    background-color: $mainBrandColor;
   }
 }
