--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -74,8 +74,8 @@
   --adp-btn-height: 100%;
   --adp-nav-arrow-color: #bc9cff;
   --adp-btn-color-hover: rgba(31, 32, 65, 0.5);
-  --adp-cell-border-radius: 50%;
   --adp-pointer-size: 0;
+
 
   * {
     box-sizing: border-box;
@@ -110,7 +110,7 @@
 
 .air-datepicker-body--day-name {
   height: 39px;
-  color: $purple-color;
+  color: $mainBrandColor;
   font-weight: $boldFontWeight;
   line-height: $mainLineHeight;
   text-align: center;
@@ -124,7 +124,7 @@
   &.-current- {
     color: #ffffff;
     font-weight: 700;
-    background: #6fcf97;
+    background: $secondaryGradient;
     border-radius: 50%;
 
     &.-in-range- {
@@ -136,7 +136,6 @@
   &.-range-from- {
     color: #ffffff;
     font-weight: 700;
-    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     border-radius: 50%;
 
     &::before {
@@ -145,7 +144,7 @@
       z-index: -1;
       width: 50%;
       height: 100%;
-      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      background: $mainGradient;
       opacity: 0.25;
       content: '';
     }
@@ -154,7 +153,6 @@
   &.-range-to- {
     color: #ffffff;
     font-weight: 700;
-    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     border-radius: 50%;
 
     &::before {
@@ -163,7 +161,7 @@
       z-index: -1;
       width: 50%;
       height: 100%;
-      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      background: $mainGradient;
       opacity: 0.25;
       content: '';
     }
@@ -172,7 +170,7 @@
   &.-focus- {
     color: #ffffff;
     font-weight: 700;
-    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    background: $mainGradient;
     border-radius: 50%;
   }
 
