--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -30,7 +30,7 @@
   }
 
   &__luxury-text {
-    color: $purple-color;
+    color: $mainBrandColor;
     font-weight: $boldFontWeight;
     font-size: $labelFontSize;
     font-family: $mainFont;
