--- a/src/pages/404/404.scss
+++ b/src/pages/404/404.scss
@@ -22,7 +22,7 @@
     position: absolute;
     z-index: -1;
     display: block;
-    background-color: $purple-color;
+    background-color: $mainBrandColor;
     transform: scaleY(0.2);
     transform-origin: center bottom;
     transition: all 0.3s;
