--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -113,7 +113,7 @@
   }
 
   &__luxury-text {
-    color: $purple-color;
+    color: $mainBrandColor;
     font-weight: $boldFontWeight;
     font-size: $labelFontSize;
     font-family: $mainFont;
