--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
@@ -30,6 +30,7 @@
   z-index: 5;
   display: flex;
   flex-direction: column;
+  margin: 0;
   padding: 10px 0;
   list-style: none;
   background-color: #fff;
