--- a/src/pages/colors-types/colors-types.scss
+++ b/src/pages/colors-types/colors-types.scss
@@ -2,20 +2,20 @@
   background-color: #fff;
 
   &__header {
-    margin-bottom: 70px;
+    margin-bottom: 62px;
     margin-left: 30px;
     padding-top: 30px;
   }
 
   &__container {
     display: flex;
-    justify-content: space-between;
-    max-width: 1120px;
+    max-width: 1141px;
+    column-gap: 415px;
     margin: 0 auto;
   }
 
   &__column {
-    max-width: 425px;
+    max-width: 445px;
   }
 
   &__color:not(:last-child) {
@@ -23,6 +23,6 @@
   }
 
   &__type:not(:last-child) {
-    margin-bottom: 50px;
+    margin-bottom: 51px;
   }
 }
