--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -52,7 +52,7 @@ block content
             +input-text({ label: 'text-field', placeholder: 'This is pretty awesome' })(autofocus)
           .form-elements__block
             +dropdown({
-              label: 'гости',
+              label: 'dropdown',
               items: ['взрослые', 'дети', 'младенцы'],
               container: 'js-guest',
               holder: 'Сколько гостей',
@@ -60,45 +60,45 @@ block content
             })
           .form-elements__block
             +input-text({ label: 'masked text field', placeholder: 'ДД.ММ.ГГГГ', mask: true })
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             +date-dropdown({ label1: 'date Dropdown', label2: 'date Dropdown', container: 'js-double-date' })
-          .form-elements__block.form-elements__block_margin-large.form-elements__block_size_s
+          .form-elements__block.form-elements__block_margin_l.form-elements__block_size_s
             +date-dropdown({ label1: 'filter date dropdown', container: 'js-filter-date' })
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             +subscription-field({ label: 'subscription text field' })
         .form-elements__column
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             h3.form-elements__title Checkbox Buttons
             .form-elements__checkbox
               +checkbox('Можно курить')
               +checkbox('Можно с питомцами')(checked)
               +checkbox('Можно пригласить гостей (до 10 человек)')(checked)
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_xl
             h3.form-elements__title Radio buttons
             .form-elements__radio
               .form-elements__radio-button
                 +radio('Мужчина')(name='gender' checked)
               .form-elements__radio-button
                 +radio('Женщина')(name='gender')
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             h3.form-elements__title Toggle
             .form-elements__toggle
               +toggle('Получать спецпредложения')(checked)
               +toggle('Получать спецпредложения')
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_xl
             h3.form-elements__title like button
             .form-elements__button-like
               +button-like(2)(class="button-like__inner")
               +button-like(12)(class="button-like_active")
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             h3.form-elements__title Rate button
             .form-elements__rate
               +rate-button(4, "rating1")
               +rate-button(5, "rating2")
         .form-elements__column
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             +range-slider("Range Slider")
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             h3.form-elements__title Buttons
             .form-elements__buttons
               +button({ 'color': 'blue', 'tag': 'button', 'text': 'click me', "size": "m" })
@@ -107,24 +107,24 @@ block content
               +button({ 'color': 'white', 'tag': 'button', 'text': 'click me', "size": "m" })
               +button({ 'color': 'white', 'tag': 'button', 'text': 'click me', "size": "m" })
             .form-elements__buttons
-              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "m" })
-              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "m" })
+              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "s" })
+              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "s" })
             +button({ 'color': 'arrow', 'tag': 'button', 'text': 'перейти к оплате', "size": "m" })
-          .form-elements__block.form-elements__block_margin-large
+          .form-elements__block.form-elements__block_margin_l
             h3.form-elements__title pagination
             +pagination()
-      .form-elements__row
+      .form-elements__row.form-elements__row_margin_l
         .form-elements__column
           .form-elements__block.form-elements__block_size_s
             +dropdown({
-              label: 'удобства номера',
+              label: 'dropdown',
               items: ['спальни', 'кровати', 'ванные комнаты'],
               container: 'js-comfort',
               holder: 'Удобства'
             })
           .form-elements__block.form-elements__block_size_s
             +dropdown({
-              label: 'удобства номера',
+              label: 'dropdown',
               items: ['спальни', 'кровати', 'ванные комнаты'],
               container: 'js-comfort-opened',
               holder: 'Удобства',
@@ -133,7 +133,7 @@ block content
         .form-elements__column
           .form-elements__block
             +dropdown({
-              label: 'гости',
+              label: 'dropdown',
               items: ['взрослые', 'дети', 'младенцы'],
               container: 'js-zero-guest-opened',
               holder: 'Сколько гостей',
@@ -143,14 +143,14 @@ block content
         .form-elements__column
           .form-elements__block
             +dropdown({
-              label: 'гости',
+              label: 'dropdown',
               items: ['взрослые', 'дети', 'младенцы'],
               container: 'js-guest-opened',
               holder: 'Сколько гостей',
               buttons: true,
               opened: true
             })
-      .form-elements__row
+      .form-elements__row.form-elements__row_margin_xl
         .form-elements__column
           .form-elements__block.form-elements__block_size_s
             +expandable-checkbox-list({
@@ -158,7 +158,7 @@ block content
               list: checkboxList,
               container: 'js-expand-box'
             })
-          .form-elements__block.form-elements__block_size_s
+          .form-elements__block.form-elements__block_margin_l.form-elements__block_size_s
             +expandable-checkbox-list({
               label: 'expandable checkbox list',
               list: checkboxList,
@@ -166,8 +166,8 @@ block content
               opened: true
             })
         .form-elements__column
-          .form-elements__block
-            h3.form-elements__title Checkbox Buttons
+          .form-elements__block.form-elements__block_size_s
+            h3.form-elements__title rich Checkbox Buttons
             .form-elements__checkbox
               +checkbox('Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
               +checkbox('Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
