--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -6,14 +6,20 @@
 .form-elements {
   display: flex;
   flex-direction: column;
-  row-gap: 150px;
   max-width: 1160px;
   margin: 0 auto;
-  column-gap: 70px;
 
   &__row {
     display: flex;
-    justify-content: space-between;
+    margin-bottom: 100px;
+
+    &_margin_l {
+      margin-bottom: 170px;
+    }
+
+    &_margin_xl {
+      margin-bottom: 230px;
+    }
   }
 
   &__column {
@@ -26,14 +32,30 @@
     &_l {
       max-width: 720px;
     }
+
+    &:nth-child(2) {
+      margin-left: 126px;
+    }
+
+    &:nth-child(3) {
+      margin-left: 73px;
+    }
   }
 
   &__block + &__block {
     margin-top: 20px;
   }
 
-  &__block + &__block_margin-large {
+  &__block + &__block_margin_m {
+    margin-top: 35px;
+  }
+
+  &__block + &__block_margin_l {
     margin-top: 40px;
+  }
+
+  &__block + &__block_margin_xl {
+    margin-top: 45px;
   }
 
   &__block_size_s {
@@ -41,12 +63,12 @@
   }
 
   &__header {
-    margin-bottom: 70px;
+    margin-bottom: 63px;
     margin-left: 30px;
     padding-top: 30px;
   }
   &__title {
-    margin-bottom: 16px;
+    margin: 0 0 16px;
     @extend %label-text;
   }
 
@@ -66,7 +88,7 @@
   &__toggle {
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 20px;
   }
 
   &__rate {
