--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -2,16 +2,16 @@
   background-color: #f4f4f6;
 
   &__header {
-    margin-bottom: 70px;
+    margin-bottom: 60px;
     margin-left: 30px;
     padding-top: 30px;
   }
 
-  &__wrapper {
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  &__wrapper:not(:last-child) {
+    margin-bottom: 37px;
   }
 
-  &__wrapper:not(:last-child) {
-    margin-bottom: 40px;
+  &__wrapper:last-child {
+    margin-bottom: 140px;
   }
 }
