fix button size

--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -10,7 +10,8 @@ mixin button(options)
   -
     var sizes = {
       'm': 'button_size_m',
-      's': 'button_size_s'
+      's': 'button_size_s',
+      'xs': 'button_size_xs'
     }
   if  tag === 'button'
     button(class=`${themes[color]} ${sizes[size]}`)= text
