--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -68,6 +68,11 @@
   }
 
   &_size_s {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  &_size_xs {
     padding-top: 4px;
     padding-bottom: 4px;
   }
