--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -107,8 +107,8 @@ block content
               +button({ 'color': 'white', 'tag': 'button', 'text': 'click me', "size": "m" })
               +button({ 'color': 'white', 'tag': 'button', 'text': 'click me', "size": "m" })
             .form-elements__buttons
-              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "s" })
-              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "s" })
+              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "xs" })
+              +button({ 'color': 'transparent', 'tag': 'button', 'text': 'click me', "size": "xs" })
             +button({ 'color': 'arrow', 'tag': 'button', 'text': 'перейти к оплате', "size": "m" })
           .form-elements__block.form-elements__block_margin_l
             h3.form-elements__title pagination
