add cursor pointer #4

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -87,6 +87,7 @@
       height: 30px;
       border: 0;
       border-radius: 50%;
+      cursor: pointer;
 
       &_minus {
         background: url('/src/assets/img/icons/minus.svg'), transparent;
