--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -16,6 +16,7 @@
     margin: 0;
     font-size: inherit;
     background-size: 24px auto;
+    cursor: pointer;
     appearance: none;
 
     &:nth-of-type(1) {
