--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -43,6 +43,7 @@
     border: 2px solid #fff;
     border-radius: 50%;
     box-shadow: none;
+    cursor: pointer;
 
     &::before,
     &::after {
