--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -47,7 +47,7 @@ mixin footer()
       .footer__container
         .footer__copyright-wrapper
           p.footer__copyright-text
-            |Copyright © 2018 Toxin отель. Все права зачищены.
+            |Copyright © 2018 Toxin отель. Все права защищены.
           .footer__social
             each link in socialLinks
               +social-link(link)
