--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -9,8 +9,10 @@
     grid-column: 1 / 2;
     width: 48px;
     height: 48px;
-    margin-bottom: 10px;
-    clip-path: circle();
+    margin: 0 0 10px;
+    border: 2px solid #ffffff;
+    border-radius: 50%;
+    filter: drop-shadow(0px 10px 20px rgba(31, 32, 65, 0.1));
   }
 
   &__name {
