--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -28,5 +28,5 @@ $dark-shade-5: rgba(31, 32, 65, 0.05);
 $mainBrandColor: #bc9cff;
 $secondBrandColor: #6fcf97;
 $mainGradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-$secondaryGradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+$secondaryGradient: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
 $background-color: #ffffff;
