--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -5,14 +5,14 @@ mixin reservation-form(luxury)
   form.reservation-form.js-reservation-form
     .reservation-form__inner
       .reservation-form__header
-        .reservation-form__room-number
+        .reservation-form__room-number-wrapper
           span.reservation-form__room-number-sign №
-          span &nbsp;888
+          span.reservation-form__room-number &nbsp;888
           if luxury
             span.reservation-form__luxury-text &nbsp;люкс
-        .reservation-form__price-per-day
-          span 9&nbsp;990₽
-          span.reservation-form__price-per-day-text &nbsp;в сутки
+        .reservation-form__price-wrapper
+          span.reservation-form__price 9&nbsp;990₽
+          span.reservation-form__price-text &nbsp;в сутки
       .reservation-form__date-dropdown
         +date-dropdown({ label1: 'прибытие', label2: 'выезд', container: 'js-date-dropdown' })
       .reservation-form__dropdown
@@ -23,20 +23,20 @@ mixin reservation-form(luxury)
           span.reservation-form__prices-item-price 39&nbsp960₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
-            p Сбор за услуги: скидка 2&nbsp;179₽
+            |Сбор за услуги: скидка 2&nbsp;179₽
             .reservation-form__prices-item-info
               img(class="reservation-form__info-icon" src=require("/src/assets/img/icons/info.svg"), alt="icon")
               span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 0₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
-            p Сбор за дополнительные услуги
+            |Сбор за дополнительные услуги
             .reservation-form__prices-item-info
               img(class="reservation-form__info-icon" src=require("/src/assets/img/icons/info.svg"), alt="icon")
               span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 300₽
-      .reservation-form__total-price
-        span Итого
-        .reservation-form__total-price-dashed
-        span 38&nbsp081₽
+      .reservation-form__total
+        span.reservation-form__total-text Итого
+        .reservation-form__total-dashed
+        span.reservation-form__total-price 38&nbsp081₽
       +button({"color": "arrow", "tag": "a", "href": "/search-room.html", "text": "забронировать", 'size': 'm'})
