--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -3,7 +3,7 @@
   background-color: #fff;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  box-shadow: 0 10px 20px $dark-shade-5;
 
   &__inner {
     padding: 20px 20px 20px 22px;
@@ -12,7 +12,7 @@
   &__slider {
     position: relative;
 
-    img {
+    &-slide {
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
     }
@@ -50,6 +50,8 @@
       height: 100%;
       background: transparent;
       border: 0;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
       visibility: hidden;
       cursor: pointer;
       opacity: 0;
@@ -73,7 +75,7 @@
 
     &-button_right {
       top: 50%;
-      right: 0;
+      right: -1px;
       border: 0;
       transform: translateY(-50%) rotate(180deg);
     }
@@ -99,7 +101,7 @@
     justify-content: space-between;
   }
 
-  &__room-number {
+  &__room-number-link {
     text-decoration: none;
     @extend %item-title;
   }
