--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -7,7 +7,7 @@ html(lang="ru")
     title Страницы
   body.mock-page
     nav.pages-links
-      div
+      .pages-links__wrapper
         h3.page-links__title Страницы:
         ul.url-list__pages
           li.url-list__item
@@ -20,7 +20,7 @@ html(lang="ru")
             a(class="url-list__link" href="/search-room.html") Подбор номеров
           li.url-list__item
             a(class="url-list__link" href="/room-details.html") Информация о номере
-      div
+      .pages-links__wrapper
         h3.page-links__title UI:
         ul.url-list__ui
           li.url-list__item
