--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -67,13 +67,13 @@
       );
     }
 
-    &-button_left {
+    &-button_direction_left {
       top: 50%;
       border: 0;
       transform: translateY(-50%);
     }
 
-    &-button_right {
+    &-button_direction_right {
       top: 50%;
       right: -1px;
       border: 0;
