--- a/src/components/login-form/login-form.scss
+++ b/src/components/login-form/login-form.scss
@@ -1,7 +1,7 @@
 .login-form {
   max-width: 380px;
   background-color: #fff;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 
   &__inner {
     padding: 40px 30px 30px;
@@ -14,6 +14,10 @@
 
   &__text-fields {
     margin-bottom: 20px;
+  }
+
+  &__text-field:not(:last-child) {
+    margin-bottom: 10px;
   }
 
   &__button {
@@ -31,8 +35,4 @@
     line-height: 1.2;
     @extend %body-text;
   }
-}
-
-.text-fields__inner:not(:last-child) {
-  margin-bottom: 10px;
 }
