--- a/src/components/registration-form/registration-form.pug
+++ b/src/components/registration-form/registration-form.pug
@@ -26,7 +26,7 @@ mixin registration-form()
       .registration-form__toggle
         +toggle('Получать спецпредложения')
       .registration-form__button
-        +button({"tag": "button", "color": "arrow", "text": "перейти к оплате", "size": "m"})
+        +button({"tag": "button", "color": "arrow", "text": "перейти к оплате", "size": "m", "submit": true})
       .registration-form__login
         span.registration-form__text Уже есть аккаунт на Toxin
         +button({"color": "white", "tag": "a", "href": "/sign-in.html", "text": "войти", "size": "m"})
