--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -39,4 +39,11 @@ mixin reservation-form(luxury)
         span.reservation-form__total-text Итого
         .reservation-form__total-dashed
         span.reservation-form__total-price 38&nbsp081₽
-      +button({"color": "arrow", "tag": "a", "href": "/search-room.html", "text": "забронировать", 'size': 'm'})
+      +button({
+        "color": "arrow",
+        "tag": "button",
+        "href": "/search-room.html",
+        "text": "забронировать",
+        "size": "m",
+        "submit": true
+      })
