--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,7 +1,7 @@
 .checkbox {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
+  max-width: max-content;
   padding-left: 30px;
   line-height: 1.2;
   cursor: pointer;
