--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,5 +1,6 @@
 .toggle {
   display: block;
+  max-width: max-content;
   padding-left: 45px;
   color: $dark-shade-75;
   font-size: $mainFontSize;
