--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -93,11 +93,11 @@
       border-radius: 50%;
       cursor: pointer;
 
-      &_minus {
+      &_icon_minus {
         background: url('/src/assets/img/icons/minus.svg'), transparent;
       }
 
-      &_plus {
+      &_icon_plus {
         background: url('/src/assets/img/icons/plus.svg'), transparent;
       }
 
